import "Address.proto";

package Diadoc.Api.Proto.Invoicing;

message ExtendedOrganizationInfo {
  optional string BoxId = 1;       // идентификатор ящика в Диадоке
  optional string OrgName = 2;     // название //НаимОрг
  optional string Inn = 3;         // ИНН //ИНН ФЛ-ИНН
  optional string Kpp = 4;         // КПП //КПП
  optional Address Address = 5;    // адрес //Адрес
  optional bool IsIndividualEntity = 6 [default = false]; // организация - это ИП
  optional string Okopf = 7;       // код организационно-правовой формы по ОКОПФ
  optional string Okpo = 8;        // код в общероссийском классификаторе предприятий и организаций //ОКПО
  optional string Okdp = 9;        // код основного вида деятельности по ОКДП
  optional string Phone = 10;      // Номер контактного телефона/факс //Тлф 
  optional string BankAccountNumber = 11; // номер банковского счета //НамерСчета
  optional string BankName = 12;   // название банка //НаимБанк
  optional string BankId = 13;     // БИК //БИК
  optional string Department = 14; // структурное подразделение //СтруктПодр
  optional string FnsParticipantId = 15;     // идентификатор участника ЭДО
  optional string CorrespondentAccount = 16; // Корреспондентский счёт // КорСчет
  optional string Email = 17;                // Адрес электронной почты // ЭлПочта
  optional string OrganizationAdditionalInfo = 18; // Информация для участника // ИнфДляУчаст
  optional string OrganizationPersonInfo = 19;     // Иные сведения, идентифицирующие ФЛ или ЮЛ //ИныеСвед
  optional string Surname = 20;    // Фамилия //Фамилия
  optional string FirstName = 21;  // Имя //Имя
  optional string Patronymic = 22; // Отчество //Отчество
  optional string IndividualEntityRegistrationCertificate = 23; // Реквизиты свидетельства о государственной регистрации ИП //СвГосРегИп
}
